<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">

<LinearLayout
android:layout_height="wrap_content"
android:layout_width="match_parent"
android:orientation="vertical"
android:padding="16dp">

<TextView
    android:id="@+id/name_text_view"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:text="@string/coffee_name"
    android:textSize="20sp"
    android:textStyle="bold" />

<TextView
    android:id="@+id/grain_text_view"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:text="@string/grain_type"
    android:textSize="16sp" />

<TextView
    android:id="@+id/good_with_text_view"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:text="@string/goes_well_with"
    android:textSize="16sp" />

<TextView
    android:id="@+id/intensity_text_view"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:text="@string/intensity"
    android:textSize="16sp" />

</LinearLayout>
    </androidx.cardview.widget.CardView>

